@@ -93,7 +93,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    © 2007-2020 Michal Josef Špaček
+    © 2007-2021 Michal Josef Špaček
 
     BSD 2-Clause License
 
