@@ -277,7 +277,7 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
-© 2007-2020 Michal Josef Špaček
+© 2007-2021 Michal Josef Špaček
 
 BSD 2-Clause License
 
