@@ -5,6 +5,7 @@
  - Fix bugtracker.
  - Rewrite CSS::Struct::Output to use =head2 in doc.
  - Rewrite CSS::Struct::Output::Raw to use =head2 in doc.
+ - Update copyright years.
 
 0.03 2020-08-11T15:50:26+02:00
  - Fix test dependencies.
